# asdicts

./: .coveragerc  .gitignore  .pylintrc  AUTHORS.rst  CHANGELOG.rst  MANIFEST.in  Makefile  README.rs  README.rst  codecov.yml  default.mk  requirements-dev.txt  setup.cfg  setup.py
.github/workflows/: main.yml
asdicts/: __init__.py  dict.py
tests/: test_dict.py
