# This file is part of the asdicts.
#
# Copyright (c) 2021 2021 Serghei Iakovlev
#
# For the full copyright and license information, please view
# the LICENSE file that was distributed with this source code

[metadata]
license_file = LICENSE
description-file = README.rst
long_description_content_type = text/x-rst

[tool:pytest]
addopts = --verbose

[flake8]
exclude=.git,__pycache__,.pytest_cache,.venv,build,dist,.eggs
application-import-names=asdicts,tests
import-order-style=smarkets
max-complexity = 10
